squashin' bugs n makin' commitz

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -155,7 +155,3 @@ iframe {
   text-align: center;
   max-width: 50px;
 }
-
-/* .editing-cell {
-  
-} */
